fix spacing of images and christmas button on non-hover devices

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ footer {
 }
 
 footer > #days-until {
-  font-size: calc(8px + (16 - 8) * ((100vw - 250px) / (1600 - 250)));
+  font-size: calc(14px + (16 - 14) * ((100vw - 250px) / (1600 - 250)));
   display: flex;
   justify-self: center;
   z-index: 1;
@@ -288,7 +288,7 @@ header .underline-on-hover:hover {
   transition: transform 0.1s ease-in-out;
 }
 
-@media (max-width: 800px) {
+@media (hover: none) {
   #christmas-button {
     display: none;
   }
@@ -386,7 +386,7 @@ span.new-snowflake {
 
 @media (max-width: 400px) {
   #slideshow-section {
-    padding-bottom: 3em;
+    padding: 3em 0em;
   }
 }
 
@@ -605,7 +605,7 @@ span.new-snowflake {
 
 #price-list {
   list-style: none;
-  padding-bottom: 3em;
+  padding-bottom: 1.5em;
 }
 
 #price-list > li {
@@ -614,8 +614,7 @@ span.new-snowflake {
 
 #more-info-image {
   text-align: center;
-  margin-left: 3em;
-  margin-top: 1em;
+  margin: 1em 0em 1em 3em;
 }
 
 @media (max-width: 800px) {
